# api/controllers/verify_code.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"backend/api/httputil"
 	"context"
 	"log"
 	"net/http"
@@ -16,10 +17,6 @@ type VerifyCodeRequest struct {
 	VerificationCode string `json:"verificationCode"`
 }
 
-type VerifyCodeResponse struct {
-	Message string `json:"message"`
-}
-
 // VerifyCode verifica el código de verificación de un usuario.
 //
 // Este endpoint verifica si el código proporcionado por el usuario coincide con el
@@ -33,16 +30,16 @@ type VerifyCodeResponse struct {
 // @Accept json
 // @Produce json
 // @Param body body VerifyCodeRequest true "Datos de la solicitud"
-// @Success 200 {object} VerifyCodeResponse "Respuesta exitosa al verificar el código"
-// @Failure 400 {object} ErrorResponse "Datos de solicitud inválidos"
-// @Failure 401 {object} ErrorResponse "Código de verificación incorrecto"
-// @Failure 404 {object} ErrorResponse "Usuario no encontrado"
-// @Failure 500 {object} ErrorResponse "Error interno del servidor"
-// @Router /verify [post]
+// @Success 200 {object} httputil.StandardResponse "Usuario verificado"
+// @Failure 400 {object} httputil.ErrorResponse "Datos de solicitud inválidos"
+// @Failure 401 {object} httputil.ErrorResponse "Código de verificación incorrecto"
+// @Failure 404 {object} httputil.ErrorResponse "Usuario no encontrado"
+// @Failure 500 {object} httputil.ErrorResponse "Error interno del servidor"
+// @Router /verify-code [post]
 func VerifyCode(c *gin.Context, firestoreClient *firestore.Client, authClient *auth.Client) {
 	var req VerifyCodeRequest
 	if err := c.BindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Datos de solicitud inválidos"})
+		c.JSON(http.StatusBadRequest, httputil.ErrorResponse{Message: "Datos de solicitud inválidos"})
 		return
 	}
 
@@ -52,11 +49,11 @@ func VerifyCode(c *gin.Context, firestoreClient *firestore.Client, authClient *a
 	// verificar si el usuario existe
 	doc, err := users.Doc(req.UID).Get(c)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error interno del servidor"})
+		c.JSON(http.StatusInternalServerError, httputil.ErrorResponse{Message: "Error interno del servidor"})
 		return
 	}
 	if !doc.Exists() {
-		c.JSON(http.StatusNotFound, ErrorResponse{Message: "Usuario no encontrado"})
+		c.JSON(http.StatusNotFound, httputil.ErrorResponse{Message: "Usuario no encontrado"})
 		return
 	}
 
@@ -66,21 +63,21 @@ func VerifyCode(c *gin.Context, firestoreClient *firestore.Client, authClient *a
 	userData := doc.Data()
 	codeValidUntil, ok := userData["codeValidUntil"].(time.Time)
 	if !ok || codeValidUntil.Before(now) {
-		c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Código de verificación expirado"})
+		c.JSON(http.StatusBadRequest, httputil.ErrorResponse{Message: "Código de verificación expirado"})
 		return
 	}
 
 	// verificar que el código de verificación sea correcto
 	verificationCode, ok := userData["verificationCode"].(string)
 	if !ok || verificationCode != req.VerificationCode {
-		c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Código de verificación incorrecto"})
+		c.JSON(http.StatusBadRequest, httputil.ErrorResponse{Message: "Código de verificación incorrecto"})
 		return
 	}
 
 	// verificar que el usuario no haya sido verificado previamente
 	verified, ok := userData["verified"].(bool)
 	if !ok || verified {
-		c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Usuario ya verificado"})
+		c.JSON(http.StatusBadRequest, httputil.ErrorResponse{Message: "Usuario ya verificado"})
 		return
 	}
 
@@ -89,7 +86,15 @@ func VerifyCode(c *gin.Context, firestoreClient *firestore.Client, authClient *a
 		"verified": true,
 	}, firestore.MergeAll)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error interno del servidor"})
+		c.JSON(http.StatusInternalServerError, httputil.ErrorResponse{Message: "Error interno del servidor"})
+		return
+	}
+
+	// marcar el usuario como verificado en Firebase Auth
+	_, err = authClient.UpdateUser(context.Background(), req.UID, (&auth.UserToUpdate{}).EmailVerified(true))
+	if err != nil {
+		log.Printf("Error al marcar usuario como verificado en Firebase Auth: %v", err)
+		c.JSON(http.StatusInternalServerError, httputil.ErrorResponse{Message: "Error interno del servidor"})
 		return
 	}
 
@@ -97,9 +102,10 @@ func VerifyCode(c *gin.Context, firestoreClient *firestore.Client, authClient *a
 	err = authClient.SetCustomUserClaims(context.Background(), req.UID, map[string]interface{}{"role": "member"})
 	if err != nil {
 		log.Printf("Error al asignar rol de miembro: %v", err)
-		c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error interno del servidor"})
+		c.JSON(http.StatusInternalServerError, httputil.ErrorResponse{Message: "Error interno del servidor"})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "Usuario verificado correctamente"})
+	c.JSON(http.StatusOK, httputil.StandardResponse{Message: "Usuario verificado"})
+
 }
