# api/httputil/responses.go
@@ -1,0 +1,10 @@
+package httputil
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
+
+type StandardResponse struct {
+	Message string      `json:"message"`
+	Data    interface{} `json:"data,omitempty"`
+}
